--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ httpx = "^0.27.0"
 logging = "^0.4.9.6"
 litellm = "^1.42.7"
 instructor = "^1.3.7"
+modal = "^0.64.10"
+vllm = "^0.5.4"
 
 
 [build-system]
