--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ litellm = "^1.42.7"
 instructor = "^1.3.7"
 modal = "^0.64.10"
 vllm = "^0.5.4"
+aiohttp = "^3.10.3"
+aiofiles = "^24.1.0"
+pytz = "^2024.1"
 
 
 [build-system]
