--- a/run_loki/docker-compose.yaml
+++ b/run_loki/docker-compose.yaml
@@ -17,7 +17,11 @@ services:
     depends_on:
       - minio
     healthcheck:
-      test: [ "CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:3100/ready || exit 1" ]
+      test:
+        [
+          "CMD-SHELL",
+          "wget --no-verbose --tries=1 --spider http://localhost:3100/ready || exit 1",
+        ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -36,7 +40,11 @@ services:
     volumes:
       - ./loki-config.yaml:/etc/loki/config.yaml
     healthcheck:
-      test: [ "CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:3100/ready || exit 1" ]
+      test:
+        [
+          "CMD-SHELL",
+          "wget --no-verbose --tries=1 --spider http://localhost:3100/ready || exit 1",
+        ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -44,19 +52,6 @@ services:
       - minio
     networks:
       <<: *loki-dns
-
-  alloy:
-    image: grafana/alloy-dev:latest
-    volumes:
-      - ./alloy-local-config.yaml:/etc/alloy/config.alloy:ro
-      - /var/run/docker.sock:/var/run/docker.sock
-    command:  run --server.http.listen-addr=0.0.0.0:12345 --storage.path=/var/lib/alloy/data /etc/alloy/config.alloy
-    ports:
-      - 12345:12345
-    depends_on:
-      - gateway
-    networks:
-      - loki
 
   minio:
     image: minio/minio
@@ -77,7 +72,7 @@ services:
     volumes:
       - ./.data/minio:/data
     healthcheck:
-      test: [ "CMD", "curl", "-f", "http://localhost:9000/minio/health/live" ]
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
       interval: 15s
       timeout: 20s
       retries: 5
@@ -113,7 +108,11 @@ services:
     ports:
       - "3000:3000"
     healthcheck:
-      test: [ "CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:3000/api/health || exit 1" ]
+      test:
+        [
+          "CMD-SHELL",
+          "wget --no-verbose --tries=1 --spider http://localhost:3000/api/health || exit 1",
+        ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -132,7 +131,6 @@ services:
       - gateway
     networks:
       - loki
-    
 
   gateway:
     image: nginx:latest
@@ -202,10 +200,9 @@ services:
       retries: 5
     networks:
       - loki
-  
 
-  flog:
-    image: mingrammer/flog
-    command: -f json -d 200ms -l
-    networks:
-      - loki
+  # flog:
+  #   image: mingrammer/flog
+  #   command: -f json -d 200ms -l
+  #   networks:
+  #     - loki
