--- a/run_loki/loki-config.yaml
+++ b/run_loki/loki-config.yaml
@@ -8,7 +8,7 @@ memberlist:
   dead_node_reclaim_time: 30s
   gossip_to_dead_nodes_time: 15s
   left_ingesters_timeout: 30s
-  bind_addr: ['0.0.0.0']
+  bind_addr: ["0.0.0.0"]
   bind_port: 7946
   gossip_interval: 2s
 
@@ -43,3 +43,8 @@ ruler:
 
 compactor:
   working_directory: /tmp/compactor
+
+limits_config:
+  reject_old_samples: false
+  reject_old_samples_max_age: 400w
+  max_query_length: 0h
